Change finger_5 to finger_pink
